# signal-tracer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt  app.cpp  example_cl_1.cpp  main.cpp
assets/demo_layouts/Basic_Demo/: Basic_Demo_Layout_FBX.fbx
assets/demo_layouts/City_Demo/: City_Map_Layout_FBX.FBX
cl_source/: add_two.cl  hello_world.cl  mat_mul.cl  ray_tracing.cl
docs/: CMakeLists.txt  Doxyfile
include/comm_ray/camera/: base_camera.hpp  camera.hpp  fps_camera.hpp  orbit_camera.hpp  viewing.hpp
include/comm_ray/cl/: cl_utils.hpp  kernels.cl
include/comm_ray/common/: containers.hpp  cyGL.h
include/comm_ray/drawable_object/: cubesphere.hpp  drawable.hpp  line.hpp  map_draw.hpp  mesh.hpp  model.hpp  radio_device.hpp  receiver.hpp  reflection_record.hpp  transmitter.hpp  triangle_draw.hpp
include/comm_ray/geometry/: aabb.hpp  bvh_accel.hpp  bvh_map.hpp  hittable.hpp  hittable_list.hpp  intersect_record.hpp  interval.hpp  plane.hpp  quad.hpp  triangle.hpp
include/comm_ray/material/: material.hpp
include/comm_ray/radio_station/: radio_station.hpp  radio_station_utils.hpp
include/comm_ray/scene/: lighting.hpp  mesh.hpp  model.hpp  program_container.hpp  scene.hpp  texture.hpp  world.hpp
include/comm_ray/shape/: Cubesphere.h  cubesphere.h  drawable.hpp  line.hpp  mesh.hpp  model.hpp  tracer_draw.hpp  triangle_draw.hpp
include/comm_ray/signal_propagation/: propagation_params.hpp  theoratical_model.hpp  theoritical_model.hpp
include/comm_ray/tracer/: base_tracer.hpp  bvh_map.hpp  coverage_map.hpp  coverage_tracer.hpp  hittable.hpp  hittable_list.hpp  imaging_tracer.hpp  intersect_record.hpp  interval.hpp  path_record.hpp  point_container.hpp  radio_station.hpp  ray.hpp  ray_casting_tracer.hpp  reflection_record.hpp  signal_tracer.hpp  tracer_draw.hpp  tracer_interface.hpp  triangle.hpp
include/comm_ray/utils/: callback.hpp  config.hpp  constant.hpp  debugging.hpp  scene_config.hpp  utils.hpp
include/comm_ray/wrapper/: glfw_pointer.hpp
shader/: light.frag  light.vert  line.vert  model.frag  radio.frag  radio.vert  shader.frag  shader.vert  signal.frag  sphere.frag
src/: CMakeLists.txt
src/camera/: camera.cpp  viewing.cpp
src/cl/: cl_utils.cpp
src/drawable/: mesh.cpp  model.cpp  radio_device.cpp  radio_station.cpp  receiver.cpp  transmitter.cpp
src/geometry/: bvh_accel.cpp  bvh_map.cpp  plane.cpp  quad.cpp  triangle.cpp
src/shape/: Cubesphere.cpp  cubesphere.cpp
src/tracer/: base_tracer.cpp
src/utils/: callback.cpp  utils.cpp
tests/: CMakeLists.txt  aabb_test.hpp  gtest_main.cpp  intersect_aabb_test.hpp  intersect_bvh_test.hpp  intersect_hittablelist_test.hpp  intersect_test_class.hpp  intersect_triangle_test.hpp  intersection_test.hpp  interval_test.hpp  ray_test.hpp  triangle_test.hpp
